--- a/src/app/features/organisation-section/components/organisation-dashboard/organisation-dashboard.component.html
+++ b/src/app/features/organisation-section/components/organisation-dashboard/organisation-dashboard.component.html
@@ -1,10 +1,12 @@
 <app-navbar></app-navbar>
 
-<h2>Organisation Section</h2>
-<div>
-  <button routerLink="create">Create Organisation</button>
-  <button routerLink="view">View Organisation</button>
-  <button routerLink="delete">Delete Organisation</button>
+<div class="container mx-auto mt-8 p-6 bg-gray-50 shadow-lg rounded-lg">
+  <h2 class="text-2xl font-bold text-gray-700 mb-4">Organisation Section</h2>
+  <ul class="space-y-3">
+    <li><a routerLink="create" class="block bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md">Create Organisation</a></li>
+    <li><a routerLink="view" class="block bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md">View Organisation</a></li>
+    <li><a routerLink="delete" class="block bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md">Delete Organisation</a></li>
+  </ul>
 </div>
 
 <router-outlet></router-outlet>
